--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cron": "^2.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "googleapis": "^110.0.0"
+    "googleapis": "^110.0.0",
+    "moment": "^2.29.4",
+    "node-cron": "^3.0.2"
   }
 }
